costing details tables spacing issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -6579,11 +6579,8 @@ left: 17rem;
   padding: 0 28px !important;
 }
 .rmcc-main-headings {
-  position: relative;
-  th {
-    position: sticky;
-    top: 0;
-    padding: 5px 15px !important;
+  th,td {
+    padding: 10px 15px !important;
   }
 }
 .min-height-auto {
